--- a/templates/summary.html
+++ b/templates/summary.html
@@ -84,8 +84,8 @@
     </div>
 
     <div class="button">
-        <a href="{{ url_for('get_meal') }}">
-        <button id="nextpage">Next</button>
+        <a href="{{ url_for('home') }}">
+        <button id="nextpage">HOME</button>
         </a>
     </div>
     
