--- a/static/css/displayMeals.css
+++ b/static/css/displayMeals.css
@@ -1,13 +1,19 @@
 body {
+    font-family: Arial, Helvetica, sans-serif;
     display: grid;
     place-items: center;
+
     height: 100vh;
     /* width: 100vw; */
     background: linear-gradient(45deg, #38A491, #296AA5);
 }
 
+h1{
+    color: white;
+}
+
 .wrapper{
-    padding: 5px;
+    padding: 0px;
     max-width: 960px;
     width: 95%;
     margin: 20px auto;
@@ -23,7 +29,7 @@ header{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    margin: 5px 0;
+    margin: 5px;
 }
 
 .column{
@@ -31,7 +37,8 @@ header{
     flex-direction: column;
     flex: 1;
     border: 1px solid #666;
-    margin: 2px;
+    border-radius: 20px;
+    margin: 10px;
     padding: 10px;
     background: white;
     transition: 0.3s;
@@ -39,18 +46,25 @@ header{
     align-items: center;
 }
 
+.gambar {
+    width: 100%;
+    border-radius: 10%;
+}
+
+
 .column:first-child{
     margin-left: 0;
     background: white;
 }
 
 .column:last-child{
-    margin-left: 0;
+    margin-right: 0;
     background: white;
 }
 
 h2{
     font-size: 18px;
+    align-items: center;
 }
 
 p{
@@ -63,16 +77,19 @@ img{
 }
 
 .button{
-    margin-left: 109%;
-    display: flex;
-    justify-content: center;
+    /* margin-left: 109%; */
+    /* display: flex; */
+    /* margin-left: 42%; */
+    position: center;
     align-items: center;
-    margin-top: 3%;
+    margin-top: 2%;
+    justify-content: center;
+    display: flex;
 }
 
 #nextpage{
     border-radius: 10px;
-    width: 80px;
+    width: 400px;
     height: 40px;
     font-size: 20px;
     background-color: white;
@@ -82,5 +99,5 @@ img{
 
 #nextpage:hover{
     box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.25);
-    transition: 200ms;
+    transition: 200ms;
 }
