--- a/templates/NLP.html
+++ b/templates/NLP.html
@@ -25,18 +25,18 @@
                 
                 <div class="split-container">
                     <div class="left-side">
-                        <p>'Sugar (grams)' : <b>{{ item['sugar_g'] }}</b></p>
-                        <p>'Fiber (grams)' : <b>{{ item['fiber_g'] }}</b></p>
-                        <p>'Sodium (mg)' : <b>{{ item['sodium_mg'] }}</b></p>
-                        <p>'Potassium (mg)' : <b>{{ item['potassium_mg'] }}</b></p>
-                        <p>'Saturated Fat (grams)' : <b>{{ item['fat_saturated_g'] }}</b></p>
+                        <p>Sugar (grams) : <b>{{ item['sugar_g'] }}</b></p>
+                        <p>Fiber (grams) : <b>{{ item['fiber_g'] }}</b></p>
+                        <p>Sodium (mg) : <b>{{ item['sodium_mg'] }}</b></p>
+                        <p>Potassium (mg) : <b>{{ item['potassium_mg'] }}</b></p>
+                        <p>Saturated Fat (grams) : <b>{{ item['fat_saturated_g'] }}</b></p>
 
                     </div>
                     <div class="right-side">
-                        <p>'Total Fat (grams)' : <b>{{ item['fat_total_g'] }}</b></p>
-                        <p>'Cholesterol (mg)' : <b>{{ item['cholesterol_mg'] }}</b></p>
-                        <p>'Protein (grams)' : <b>{{ item['protein_g'] }}</b></p>
-                        <p>'Total Carbohydrates (grams)' : <b>{{ item['carbohydrates_total_g'] }}</b></p>
+                        <p>Total Fat (grams) : <b>{{ item['fat_total_g'] }}</b></p>
+                        <p>Cholesterol (mg) : <b>{{ item['cholesterol_mg'] }}</b></p>
+                        <p>Protein (grams) : <b>{{ item['protein_g'] }}</b></p>
+                        <p>Total Carbohydrates (grams) : <b>{{ item['carbohydrates_total_g'] }}</b></p>
                     </div>
                 </div>
             </div>
