ngebenerin NLP next nya

--- a/templates/NLP.html
+++ b/templates/NLP.html
@@ -44,7 +44,7 @@
         {% endfor %}
 
         <div class="button">
-            <a href="../Summary/summary.html">
+            <a href="{{url_for('home')}}">
                 <button id="nextpage">Next</button>
             </a>
         </div>
